<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/material_grey_200"
              android:orientation="vertical"
              tools:context="com.creativeprojects.android.bakingapp.StepDescriptionFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <ImageView
        android:id="@+id/thumbnail_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="80dp"
        android:adjustViewBounds="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/description_title"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="casual"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/back_step_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/next_step_button"
            android:text="@string/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
