
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.creativeprojects.android.bakingapp.StepSelectionFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_selection_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>
